# trip_planner_from_scratch

./: agents.py  main.py  pyproject.toml  readme.md  tasks.py
tools/: calculator_tools.py  search_tools.py
