[tool.poetry]
name = 'trip-planner-yt'
version = "0.1.0"
description = 'Simple AI trip planner'
authors=["Joao Moura, Brandon Hancock, Jeong Min Han"]

[tool.poetry.dependencies]
python = ">=3.10.0, <3.12.4"
crewai = "^0.22.5"
unstructured = '==0.10.25'
pyowm = '3.3.0'
python-dotenv = '1.0.0'
langsmith = "^0.1.33"
langchain-openai = "^0.0.5"
setuptools = "^69.2.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclue = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration
select = ['E','W','F','I','B','C4','ARG','SIM']
ignore = ['W291','W292','W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

